Prevent word break on headings

--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -16,6 +16,11 @@ h1 {
 	font-size: 2.5em;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    /* prevent word break on headings */
+    word-break: normal;
+}
+
 blockquote {
 	/* inspired by docs.microsoft.com */
 	font-size: inherit;
